[squash] neath_port_talbet_council correction

--- a/sass/custom/neath_port_talbet_council.scss
+++ b/sass/custom/neath_port_talbet_council.scss
@@ -46,7 +46,7 @@ $logo-image-height: 2em;
   }
 
   .govuk-header__service-name {
-    color: $custom-text-colour;
+    display: none;
   }
 
   .govuk-header__container {
